# fast-api-production-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: af6d5aa35ed9_auth_user_credentials_role_refresh_.py  d86ae30a4ee5_initial_schema.py
src/fast_api_production_template/: database.py  dependencies.py  main.py  security.py
src/fast_api_production_template/models/: __init__.py  comment.py  post.py  refresh_token.py  role.py  user.py
src/fast_api_production_template/repositories/: __init__.py  comment.py  pagination.py  post.py  refresh_token.py  user.py
src/fast_api_production_template/routers/: __init__.py  auth_route.py  comment_route.py  health_route.py  metrics_route.py  post_route.py  user_route.py
src/fast_api_production_template/schemas/: __init__.py  auth.py  comment.py  post.py  user.py
src/fast_api_production_template/services/: __init__.py  auth.py  content.py  email.py
src/fast_api_production_template/utils/: errors.py  metrics.py  rate_limit.py  settings.py  setup.py
tests/: conftest.py  test_api.py  test_auth.py  test_health.py  test_service.py
